# Image-Manipulation

./: CMakeLists.txt  Image.cpp  Image.h  a.out  main.cpp  stb_image.h  stb_image_write.h
